Revamp de l'interface graphique entierement, manque juste partie services a lier + pdp

--- a/xmart-frontend/src/main/resources/Calendrier2Admin.fxml
+++ b/xmart-frontend/src/main/resources/Calendrier2Admin.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Calendrier2Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Calendrier2ControllerAdmin">
    <children>
       <ImageView pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@photo/Calendar.png" />
+            <Image url="@photo/CalendarAdmin.png" />
          </image>
       </ImageView>
       <ImageView fx:id="Bar" fitHeight="590.0" fitWidth="160.0" layoutX="1080.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" visible="false">
@@ -24,7 +24,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Label fx:id="Adresse" layoutX="1125.0" layoutY="179.0" prefHeight="41.0" prefWidth="103.0" text="71 Rue Saint Simon, Crétel" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true" />
+      <Label fx:id="Adresse" layoutX="1131.0" layoutY="179.0" prefHeight="41.0" prefWidth="97.0" text="71 Rue Saint Simon, Crétel" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true" />
       <Label fx:id="Instruction" alignment="CENTER" layoutX="1083.0" layoutY="258.0" prefHeight="206.0" prefWidth="151.0" text="SURVOLEZ UN ÉVÉNEMENT POUR AFFICHER LES DÉTAILS" textAlignment="CENTER" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="20.0" />
@@ -435,5 +435,6 @@
       <Button fx:id="Sa5" layoutX="763.0" layoutY="600.0" mnemonicParsing="false" onAction="#Sa5_P" onMouseEntered="#Sa5_Ent" onMouseExited="#Sa5_Exi" opacity="0.0" prefHeight="99.0" prefWidth="137.0" text="Button" />
       <Button fx:id="Di5" layoutX="904.0" layoutY="600.0" mnemonicParsing="false" onAction="#Di5_P" onMouseEntered="#Di5_Ent" onMouseExited="#Di5_Exi" opacity="0.0" prefHeight="99.0" prefWidth="137.0" text="Button" />
       <Button fx:id="Di4" layoutX="903.0" layoutY="501.0" mnemonicParsing="false" onAction="#Di4_P" onMouseEntered="#Di4_Ent" onMouseExited="#Di4_Exi" opacity="0.0" prefHeight="99.0" prefWidth="137.0" text="Button" />
+      <Button fx:id="Ajouter" layoutX="1081.0" layoutY="614.0" mnemonicParsing="false" onAction="#Ajouter_Evenement" opacity="0.0" prefHeight="41.0" prefWidth="160.0" text="Button" />
    </children>
 </AnchorPane>
