--- a/xmart-frontend/src/main/resources/DemandeConnexion.fxml
+++ b/xmart-frontend/src/main/resources/DemandeConnexion.fxml
@@ -6,32 +6,37 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="517.0" prefWidth="602.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.DemandeConnexion">
+<AnchorPane prefHeight="720.0" prefWidth="672.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.DemandeConnexion">
    <children>
-      <ImageView fitHeight="73.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@photo/Demandes.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="73.0" fitWidth="145.0" opacity="0.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/myUp.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="70.0" layoutY="208.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Nom" />
-      <Label layoutX="70.0" layoutY="254.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Prenom" />
-      <Label layoutX="70.0" layoutY="343.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="email" />
-      <Label layoutX="70.0" layoutY="297.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Numero étudiant" />
-      <Button layoutX="226.0" layoutY="465.0" mnemonicParsing="false" onMouseClicked="#accepter" prefHeight="26.0" prefWidth="123.0" style="-fx-background-color: green; -fx-text-fill: white; -fx-font-weight: bold;" text="Valider" />
-      <Label fx:id="nom" layoutX="226.0" layoutY="208.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="email" layoutX="228.0" layoutY="343.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="matricule" layoutX="226.0" layoutY="297.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="prenom" layoutX="228.0" layoutY="254.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <ImageView fitHeight="27.0" fitWidth="32.0" layoutX="347.0" layoutY="395.0" onMouseClicked="#suivant" pickOnBounds="true" preserveRatio="true">
+      <Label layoutX="70.0" layoutY="208.0" opacity="0.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Nom" />
+      <Label layoutX="70.0" layoutY="254.0" opacity="0.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Prenom" />
+      <Label layoutX="70.0" layoutY="343.0" opacity="0.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="email" />
+      <Label layoutX="70.0" layoutY="297.0" opacity="0.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Numero étudiant" />
+      <Button layoutX="244.0" layoutY="553.0" mnemonicParsing="false" onMouseClicked="#accepter" opacity="0.0" prefHeight="30.0" prefWidth="183.0" style="-fx-background-color: green; -fx-text-fill: white; -fx-font-weight: bold;" text="Valider" />
+      <Label fx:id="nom" layoutX="297.0" layoutY="299.0" prefHeight="32.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
+      <Label fx:id="email" layoutX="296.0" layoutY="410.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
+      <Label fx:id="matricule" layoutX="297.0" layoutY="373.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
+      <Label fx:id="prenom" layoutX="297.0" layoutY="339.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
+      <ImageView fitHeight="40.0" fitWidth="44.0" layoutX="436.0" layoutY="547.0" onMouseClicked="#suivant" opacity="0.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/suivant (1).png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="27.0" fitWidth="32.0" layoutX="212.0" layoutY="395.0" onMouseClicked="#precedent" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="39.0" layoutX="197.0" layoutY="549.0" onMouseClicked="#precedent" opacity="0.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/precedent.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="photo" fitHeight="130.0" fitWidth="181.0" layoutX="394.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="photo" fitHeight="150.0" fitWidth="150.0" layoutX="261.0" layoutY="126.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
