--- a/xmart-frontend/src/main/resources/ModifyOffre.fxml
+++ b/xmart-frontend/src/main/resources/ModifyOffre.fxml
@@ -9,28 +9,33 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Modifyoffre">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="672.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Modifyoffre">
    <children>
-      <ImageView fitHeight="70.0" fitWidth="150.0" layoutX="17.0" layoutY="17.0">
+      <ImageView pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@photo/ModifierOffre.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="70.0" fitWidth="150.0" layoutX="17.0" layoutY="17.0" opacity="0.0">
          <image>
             <Image url="@photo/myUp.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="17.0" layoutY="139.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Titre" />
-      <Label layoutX="17.0" layoutY="199.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Domaine" />
-      <Label fx:id="Niveau" layoutX="17.0" layoutY="254.0" prefHeight="22.0" prefWidth="126.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Niveau d'étude" />
-      <Label layoutX="17.0" layoutY="395.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Description" />
-      <TextField fx:id="titre" layoutX="180.0" layoutY="137.0" />
-      <TextField fx:id="niveau" layoutX="180.0" layoutY="252.0" />
-      <TextField fx:id="domaine" layoutX="180.0" layoutY="197.0" />
-      <Label layoutX="165.0" layoutY="87.0" prefHeight="30.0" prefWidth="329.0" style="-fx-font-size: 20px; -fx-font-weight: bold;" text="       Modifier l'offre" />
-      <ScrollPane layoutX="151.0" layoutY="395.0" prefHeight="222.0" prefWidth="382.0">
+      <Label layoutX="17.0" layoutY="139.0" opacity="0.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Titre" />
+      <Label layoutX="17.0" layoutY="199.0" opacity="0.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Domaine" />
+      <Label fx:id="Niveau" layoutX="17.0" layoutY="254.0" opacity="0.0" prefHeight="22.0" prefWidth="126.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Niveau d'étude" />
+      <Label layoutX="17.0" layoutY="395.0" opacity="0.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Description" />
+      <TextField fx:id="titre" layoutX="257.0" layoutY="180.0" />
+      <TextField fx:id="niveau" layoutX="255.0" layoutY="262.0" />
+      <TextField fx:id="domaine" layoutX="256.0" layoutY="220.0" />
+      <Label layoutX="165.0" layoutY="87.0" opacity="0.0" prefHeight="30.0" prefWidth="329.0" style="-fx-font-size: 20px; -fx-font-weight: bold;" text="       Modifier l'offre" />
+      <ScrollPane layoutX="253.0" layoutY="341.0" prefHeight="184.0" prefWidth="329.0">
          <content>
             <TextArea fx:id="description" prefHeight="210.0" prefWidth="383.0" />
          </content>
       </ScrollPane>
-      <Button fx:id="modifier" layoutX="216.0" layoutY="654.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="38.0" prefWidth="182.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 13px;" text="Modifier" />
-      <Label layoutX="19.0" layoutY="320.0" prefHeight="22.0" prefWidth="64.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Durée" />
-      <TextField fx:id="duree" layoutX="180.0" layoutY="318.0" />
+      <Button fx:id="modifier" layoutX="245.0" layoutY="581.0" mnemonicParsing="false" onAction="#Modifier" opacity="0.0" prefHeight="38.0" prefWidth="182.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 13px;" text="Modifier" />
+      <Label layoutX="19.0" layoutY="320.0" opacity="0.0" prefHeight="22.0" prefWidth="64.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Durée" />
+      <TextField fx:id="duree" layoutX="255.0" layoutY="299.0" />
    </children>
 </AnchorPane>
