--- a/xmart-frontend/src/main/resources/Principal2.fxml
+++ b/xmart-frontend/src/main/resources/Principal2.fxml
@@ -24,8 +24,13 @@
                </image>
             </ImageView>
             <Button fx:id="Deconnexion" layoutY="674.0" mnemonicParsing="false" onAction="#Deconnecter" opacity="0.0" prefHeight="26.0" prefWidth="206.0" text="Button" />
-            <Label fx:id="fullName" layoutX="4.0" layoutY="176.0" prefHeight="72.0" prefWidth="206.0" style="-fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 20px;" text="Label" />
+            <Label fx:id="fullName" alignment="CENTER" layoutX="16.0" layoutY="167.0" prefHeight="90.0" prefWidth="178.0" style="-fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 20px;" text="Jean Jaures" textAlignment="CENTER" wrapText="true" />
             <Label layoutX="4.0" layoutY="335.0" onMouseClicked="#profil" opacity="0.0" prefHeight="34.0" prefWidth="206.0" style="-fx-text-fill: white;" text="Label" />
+            <ImageView fx:id="photo" fitHeight="150.0" fitWidth="150.0" layoutX="28.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@photo/Man1.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Button fx:id="BStages" layoutX="266.0" layoutY="33.0" mnemonicParsing="false" onAction="#BStages" opacity="0.0" prefHeight="172.0" prefWidth="146.0" text="Button" />
